# sysid-ROS2-offboard

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  compose.yaml  package.xml  startup.bash  startup_docker.bash
include/: mode.hpp
src/: main.cpp
src/actuator_control/: CMakeLists.txt  actuator_control.cpp  package.xml
src/signals/: ms_aeroprop_7s1p_T30_f005-075-2_100hz.csv  ms_aeroprop_T30_f005-075-2_100hz.csv
src/velocity_command/: CMakeLists.txt  package.xml
src/velocity_command/src/: velocity_command.cpp
